<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/red"
    android:id="@+id/background"
    android:gravity="center"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:text="@string/gameOver"
        android:textStyle="bold"
        android:id="@+id/title"
        android:layout_marginBottom="100dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/dark"
        android:text="@string/yourScoreWas"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:text="0"
        android:textStyle="bold"
        android:id="@+id/score"
        android:layout_marginBottom="100dp"
        />

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/white"
        android:id="@+id/tryAgain"
        android:layout_marginBottom="80dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tryAgain"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="@color/dark"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/dark"
        android:id="@+id/share"
        android:paddingHorizontal="30dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shareScore"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:paddingHorizontal="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/redDark"
        android:id="@+id/returnHome"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/returnHome"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            />
    </RelativeLayout>



</LinearLayout>